# LightOCR

./: .gitattributes  .gitignore  AI开发执行计划.md  LICENSE  LightOCR.sln  LightOCR_PP-OCRv6_Windows开发完整方案.md  README.md  交付物.txt
docs/: poc-report.md
eng/: build-app.ps1  build-native.ps1  check_dict.py  check_dict2.py  check_image_content.py  check_model_metadata.py  compare_dicts.py  debug_chinese.py  debug_chinese2.py  debug_detection.py  debug_indices.py  debug_medium_indices.py  dependencies.lock.json  extract_dict.py  extract_dict_fixed.py  extract_official_dict.py  fetch-dependencies.ps1  fetch-models.ps1  final_chinese_test.py  final_test_medium.py  models.lock.json  package.ps1  precise_crop_test.py  print_paddleocr_result.py  run_stability_test.py  save_paddle_dict.py  show_result.py  test_chinese.py  test_chinese_output.py  test_clean_crop.py  test_exact_preprocessing.py  test_medium_ci.py  test_medium_model.py  test_ocr_pipeline.py  test_official_pipeline.py  test_ppocr_dict.py  test_ppocr_keys.py  verify_recognition.py
installer/: LightOCR.iss
models/dict/: official_medium_dict.txt  ppocrv6_dict.txt  rec_char_dict.txt
models/onnx/det/: inference.yml
models/onnx/rec/: inference.yml
src/LightOCR.App/: App.xaml  App.xaml.cs  LightOCR.App.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
src/LightOCR.App/Infrastructure/: SingleInstanceGuard.cs
src/LightOCR.App/Interop/: NativeOcrMethods.cs  OcrEngine.cs  SafeOcrHandle.cs
src/LightOCR.App/Models/: NormalizedImage.cs  OcrResult.cs  Settings.cs
src/LightOCR.Native/: CMakeLists.txt
src/LightOCR.Native/include/: lightocr_api.h
src/LightOCR.Native/src/: box_sorter.cpp  box_sorter.h  image_preprocessor.cpp  image_preprocessor.h  json_serializer.cpp  json_serializer.h  lightocr_api.cpp  ocr_config.cpp  ocr_config.h  ocr_engine.cpp  ocr_engine.h  ocr_pipeline.cpp  ocr_pipeline.h  text_detector.cpp  text_detector.h  text_recognizer.cpp  text_recognizer.h
src/LightOCR.Native/tests/: CMakeLists.txt  test_paddle_load.cpp
tests/ChineseTests/: paddleocr_result.json  result.json  result_pretty.json
tests/LightOCR.App.Tests/: LightOCR.App.Tests.csproj  Program.cs
tests/LightOCR.IntegrationTests/: Program.cs
tests/TestAssets/: result.json
(+32 files in other folders)
